buildscript {
    repositories {
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
    }
}

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

configurations {
    provided
    compile.extendsFrom provided
}

group = project.maven_group
version = project.plugin_version
archivesBaseName = project.archives_base_name

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url "https://www.jetbrains.com/intellij-repository/releases" }
}

dependencies {
    // Choose Julti version: https://jitpack.io/#DuncanRuns/Julti
    compileOnly 'com.github.DuncanRuns:Julti:v1.4.3'
    // compile 'com.intellij:forms_rt:7.0.3'

    // Google Sheets API
    shadow 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
    shadow 'com.google.auth:google-auth-library-oauth2-http:1.16.1'
    shadow group: 'com.jgoodies', name: 'jgoodies-forms', version: '1.9.0'

}


processResources {
    inputs.property "version", project.version

    filesMatching("julti.plugin.json") {
        expand "version": project.version
    }
}

// Compiled .class files which Julti complains about, but aren't necessary, so they get excluded ¯\_(ツ)_/¯
shadowJar {
    dependencies {
        exclude 'com/google/common/collect/ImmutableSortedSetFauxverideShim.class'
        exclude 'META-INF/versions/9/module-info.class'
        exclude 'org/apache/commons/logging/impl/ServletContextCleaner.class'
    }
    configurations = [project.configurations.shadow]
}

var home = System.getProperty('user.home')
var jultiPluginsFolderPath = "${home}/.Julti/plugins"
task copyJar(type: Copy) {
    from shadowJar // shortcut for createJar.outputs.files
    into jultiPluginsFolderPath
}